express install / start script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StylesByDiva",
+  "name": "Stylesbydiva",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ianpaulfo/StylesByDiva/issues"
   },
-  "homepage": "https://github.com/ianpaulfo/StylesByDiva#readme"
+  "homepage": "https://github.com/ianpaulfo/StylesByDiva#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
